--- a/back.html
+++ b/back.html
@@ -23,13 +23,14 @@
                         <p>
                             <script src="email-validation.js"></script>
                             <input type="text" id="login-email" placeholder="请输入登录邮箱">
-                            <button class="send-verification-code-btn" disabled>发送验证码</button>
+                        </p>
+                            <!--<button class="send-verification-code-btn" disabled>发送验证码</button>
                         </p>
                         <p class="password">
                             <input type="password" placeholder="请输入邮箱验证码">
                             <i class="ri-eye-off-line"></i>
                         </p>
-                        <p>
+                        <p>-->
                             <input type="submit" class="submit" value="找回密码"
                                 onclick="window.location.href='login.html'; return false;">
                         </p>
